Add Oregon over Arduino (Usb or serial) communication

--- a/DomoHard/DomoHard.csproj
+++ b/DomoHard/DomoHard.csproj
@@ -39,12 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\OregonData.cs" />
+    <Compile Include="OregonOnSerial.cs" />
     <Compile Include="TeleInfoReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="TeleinfoTest" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
