--- a/DomoHard/DomoHard.csproj
+++ b/DomoHard/DomoHard.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\OregonData.cs" />
+    <Compile Include="Data\SensorData.cs" />
     <Compile Include="Data\TeleInfoData.cs" />
     <Compile Include="OregonOnSerial.cs" />
     <Compile Include="TeleInfoReader.cs" />
