--- a/DomoHardServ/DomoHardServ.csproj
+++ b/DomoHardServ/DomoHardServ.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveData.cs" />
     <Compile Include="SensorWatcher.cs" />
   </ItemGroup>
   <ItemGroup>
