Ecriture en fichier

--- a/DomoHardServ/App.config
+++ b/DomoHardServ/App.config
@@ -3,6 +3,7 @@
   <appSettings>
     <add key="mongoConnectionString" value="mongodb://WHS"/>
     <add key="mongoDbName" value="homedata"/>
-    <add key="TeleInfoPort" value="/dev/ttyO1"/>    
+    <add key="TeleInfoPort" value="/dev/ttyO1"/>
+    <add key="DataFolder" value="/home/"/>
   </appSettings>
 </configuration>
